plugins {
    id "java"
}

subprojects {
    apply plugin: "java"

    group = "by.radioegor146"
    description = rootProject.name
    version = "1.0.0"

    buildDir = rootProject.file("build/${project.name}")
    java.sourceCompatibility = JavaLanguageVersion.of(11)
    java.targetCompatibility = JavaLanguageVersion.of(11)
    compileJava.options.encoding = "UTF-8"
}